# meatball-training

./: MANIFEST.in  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
meatball/: __init__.py
meatball/music/: progressions.py  sequence.py  theory.py
meatball/static/js/: player.js
meatball/ui/: components.py  session.py
static/: player.js  styles.css
tests/music/: test_progressions.py  test_sequence.py  test_theory.py
