[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meatball"
version = "0.1.0"
description = "A tool for practicing chord progressions"
authors = [
    {name = "Nathan Kundtz"}
]
dependencies = [
    "streamlit>=1.24.0",
    "typing-extensions>=4.5.0",
]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["meatball"]

[tool.setuptools.package-data]
meatball = [
    "static/js/*.js",
    "static/css/*.css",
]
